# northwind-rs

./: Cargo.toml  Procfile  README.md  docker-compose.yaml  drill.yml  project.toml  restclient.http  sqlx-data.json
apps/actix/: Cargo.toml
apps/actix/src/: errors.rs  lib.rs  main.rs  routes.rs
apps/actix/src/handlers/: errors.rs  mod.rs  users.rs  web.rs
apps/actix/src/middlewares/: auth.rs  mod.rs  request_id.rs
components/core/: Cargo.toml
components/core/src/: errors.rs
components/user/: Cargo.toml
components/user/src/: lib.rs
components/user/src/domain/: jwt_processor.rs  mod.rs  user_repository.rs
components/user/src/repositories/: user_repository_impl.rs
components/user/src/services/: jwt_processor_impl.rs  mod.rs
core/: Cargo.toml
domain/: Cargo.toml
domain/src/authn/: mod.rs
domain/src/authn/models/: auth.rs  user.rs
domain/src/authn/repositories/: user_repository.rs
domain/src/authn/services/: jwt_processor.rs  mod.rs
domain/src/models/: user.rs
infrastructure/: Cargo.toml
infrastructure/src/repositories/: user.rs
migrations/: 20210304173344_create_users_table.down.sql  20210304173344_create_users_table.up.sql  20210417062938_seed_user_data.down.sql  20210417062938_seed_user_data.up.sql  20210417084514_create_northwind_ddl.up.sql  20210417084553_create_northwind_data.up.sql
src/: lib.rs  main.rs  routes.rs
src/handlers/: users.rs
src/middlewares/: auth.rs
src/models/: auth.rs  user.rs
src/repositories/: user.rs
static/: welcome.html
user/: Cargo.toml
user/src/: lib.rs
user/src/repositories/: user.rs
user/src/services/: jwt_processor_impl.rs  jwt_service.rs
