[package]
name = "practical-rust"
version = "0.1.0"
authors = ["thangchung <thangchung@ymail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-web = "2"
actix-rt = "1"
serde = "1.0"
serde_derive = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
diesel = { version = "^1.1.0", features = ["r2d2", "postgres"] }
r2d2 = "0.8"
dotenv = "0.15"
futures = "0.3"
