[package]
name = "northwind-domain"
version = "0.1.0"
authors = ["thangchung <thangchung@ymail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = "0.12.0"
chrono = {version = "0.4.19", features = ["serde"]}
serde = "1.0"
serde_json = "1.0"
uuid = {version = "0.8", features = ["serde", "v4"]}