[package]
name = "northwind-infrastructure"
version = "0.1.0"
authors = ["thangchung <thangchung@ymail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
uuid = {version = "0.8", features = ["serde", "v4"]}
sha2 = "0.9"
futures = "0.3"
sqlx = {version = "0.5.2", default-features = false, features = ["runtime-async-std-native-tls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]}
northwind-domain = { path = "../domain", version = "0.1.0" }
