[package]
name = "northwind-user"
version = "0.1.0"
authors = ["thangchung <thangchung@ymail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = "0.12.0"
chrono = {version = "0.4.19", features = ["serde"]}
uuid = {version = "0.8", features = ["serde", "v4"]}
sha2 = "0.9"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
derive_more = "0.99.11"
anyhow = "1.0.40"
color-eyre = "0.5.10"
jsonwebtoken = "7.2.0"
async-trait = "0.1.42"
sqlx = {version = "0.5.2", default-features = false, features = ["runtime-async-std-native-tls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]}
northwind-core = { path = "../core", version = "0.1.0" }